--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Items#index</h1>
-<p>Find me in app/views/items/index.html.erb</p>
+<table class="table">
+  <tr>
+    <th></th>
+    <th>title</th>
+    <th>description</th>
+    <th>coast</th>
+    <th>material</th>
+    <th>category</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+<% @items.each do |item| %>
+  <tr>
+    <td><%= item.id %></td>
+    <td><%= item.title %></td>
+    <td><%= item.description %></td>
+    <td><%= item.coast %></td>
+    <td><%= item.material %></td>
+    <td><%= item.category.title if item.category %></td>
+  </tr>
+<% end %>
+</table>
