--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,1 +1,9 @@
-<%== TunedSanitize::for_(@welcome.content) if @welcome %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>KrestWood</title>
+</head>
+<body>
+  <%== TunedSanitize::for_(@welcome.content) if @welcome %>
+</body>
+</html>
