--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <% set_meta_tags :site => "#{@item.title} | krest-wood.by",
+  <% set_meta_tags :site => "krest-wood.by",
                    :title => "#{@item.title}",
                    :reverse => true,
                    :description => Seo.get_description_for(@item),
