--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <% set_meta_tags :site => "krest-wood.by",
-                   :title => "krest-wood",
+                   :title => "Главная",
                    :reverse => true,
                    :description => Seo.get_description_for_welcome(@welcome),
                    :keywords => Seo.get_keywords_for_welcome(@welcome) if @welcome %>
