--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <% set_meta_tags :site => "#{@category.title} | krest-wood.by",
+  <% set_meta_tags :site => "krest-wood.by",
                    :title => "#{@category.title}",
                    :reverse => true,
                    :description => Seo.get_description_for(@category),
